ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tech-maturity-ingress-rules
  namespace: default
spec:
  rules:
  - host: techmaturity.metmom.mmih.biz
    http:
      paths:
      - path: /
        backend:
          serviceName: tech-maturity
          servicePort: 80
